Carvana.com needs the fetch AbortSignal quirk https://bugs.webkit.org/show_bug.cgi?id=199540

Reviewed by Chris Dumez.

Manually tested.

* page/Quirks.cpp:
(WebCore::Quirks::shouldIgnoreInvalidSignal const):


Canonical link: https://commits.webkit.org/213450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247191 268f45cc-cd09-0410-ab3c-d52691b4dbfc