Source/WebCore/page/Quirks.cpp
@@ -94,7 +94,9 @@ bool Quirks::shouldIgnoreInvalidSignal() const
         return false;
 
     auto host = m_document->topDocument().url().host();
-    return equalLettersIgnoringASCIICase(host, "www.thrivepatientportal.com") || equalLettersIgnoringASCIICase(host, "www.bnz.co.nz");
+    return equalLettersIgnoringASCIICase(host, "www.thrivepatientportal.com")
+        || equalLettersIgnoringASCIICase(host, "www.bnz.co.nz")
+        || equalLettersIgnoringASCIICase(host, "www.carvana.com");
 }
 
 bool Quirks::needsFormControlToBeMouseFocusable() const
